journal/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name:  frontend
  labels:
    app: frontend
  namespace: default
spec:
  selector:
    app:  frontend
  type:  ClusterIP
  ports:
  - port:  8080
    targetPort:  8080
    protocol: TCP
