journal/frontend/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: teste.com
    http:
      paths:
        - path: /api
          backend:
            serviceName: frontend
            servicePort: 8080
